--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     Se a cobrinha se chocar contra si, <strong>fim de jogo</strong>.
                 </p>
                 <p>
-                    Desenvolvido por <a target="_blank" href="https://github.com/augusto404">Augusto404</a>, feito pelas aulas da Digital Innovation One com a professora <a target="_blank" href="https://github.com/SpruceGabriela">Gabriela Pinheiro</a>.
+                    Desenvolvido por <a target="_blank" href="https://github.com/MarlonCesara">MarlonCesara</a>
                 </p>
             </ol>
         </div>
